overflow fix

--- a/app/globals.css
+++ b/app/globals.css
@@ -72,7 +72,3 @@
     @apply bg-background text-foreground bg-black text-white;
   }
 }
-html,body{
-  overflow-x: hidden;
-}
-
